# snap-openstack-network-agents

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: build-snap.yaml  pr.yaml  test-python.yaml
openstack_network_agents/cli/: common.py  log.py  main.py  nics.py  setup_bridge.py  show_bridge_setup.py
openstack_network_agents/core/: bridge_datapath.py  common.py  constants.py  external_networking.py  nics.py
openstack_network_agents/hooks/: common.py  configure.py  install.py  log.py
snap/: snapcraft.yaml
snap/hooks/: configure  install
tests/unit/core/: __init__.py  test_external_networking.py
